--fix core dom query to return jquery wrapped elements

--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -7,8 +7,8 @@ body {
     width: 100%;
     height: 100%;
     font-family: 'Raleway','Open Sans',Helvetica,Arial,sans-serif;
-    color: #fff;
-    background-color: #000;
+    color: #333;
+    background-color: #fff;
 }
 html {
     width: 100%;
